implementar un poco de estilos y agregar un grid para mostrar informacion

--- a/src/styles/SeccionMapaInteractiva.module.css
+++ b/src/styles/SeccionMapaInteractiva.module.css
@@ -1,20 +1,26 @@
 .main {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: var(--gap-medium);
-    height: 100%;
-    width: 100%;
-    min-height: 400px;
-}
-
-.mapContainer {
-    height: 100%;
-    width: 100%;
+    gap: var(--padding-inline-medium);
 }
 
 .dropdownContainer {
     height: 2rem;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: var(--padding-inline-medium);
+}
+
+.dropdownContainer p {
+    font-size: var(--font-size-large);
+    color: rgb(var(--text-color-rgb));
+    font-weight: bold;
+}
+
+/* Mobile */
+@media (min-width: 700px) {
 }
