--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,14 +1,15 @@
 .main {
     display: flex;
     flex-direction: column;
-    height: 100%;
     width: 100%;
+    height: 100dvh;
+    height: 100vh;
     gap: var(--gap-medium);
     overflow-y: auto;
-    padding-inline: var(--padding-inline-large);
-    max-width: var(--max-width);
+}
+
+.main section {
     align-self: center;
-    justify-self: center;
 }
 
 .headerSection {
@@ -17,14 +18,49 @@
     justify-content: center;
     align-items: left;
     gap: var(--gap-small);
-    margin-block-start: var(--gap-large);
+    position: relative;
+    height: 20rem;
+    width: 100%;
+}
+
+.headerSection::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.4);
+}
+
+.titleContainer {
+    display: flex;
+    flex-direction: column;
+    padding-inline: var(--padding-inline-large);
+    padding-block: var(--padding-block-large);
+    gap: var(--gap-medium);
+    text-align: center;
+    z-index: 1;
+}
+
+.headerSection h1 {
+    z-index: 1;
+    font-size: var(--font-size-xlarge);
+    color: white;
+    letter-spacing: 0.1rem;
+    font-weight: bold;
+}
+
+.headerSection p {
+    z-index: 1;
+    font-size: var(--font-size-medium);
+    color: white;
+    font-weight: bold;
 }
 
 .mapSection {
     width: 100%;
-    max-width: var(--max-width);
-    aspect-ratio: 1/1;
     margin-block-end: var(--gap-large);
+    padding-inline: var(--padding-inline-large);
+    max-width: var(--max-width);
 }
 
 /* Enable hover only on non-touch devices */
