--- a/src/styles/Mapa.module.css
+++ b/src/styles/Mapa.module.css
@@ -1,5 +1,9 @@
 .main {
-    min-height: 100%;
     height: 100%;
     width: 100%;
+}
+.map {
+    height: 100%;
+    width: 100%;
+    border-radius: var(--border-radius);
 }
