--- a/src/styles/DashboardGrid.module.css
+++ b/src/styles/DashboardGrid.module.css
@@ -50,8 +50,9 @@
 
 .chartContainer {
     display: flex;
+    overflow-x: auto;
     width: 100%;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 
 .topItemTitleContainer .title {
@@ -115,6 +116,8 @@ arcOffset = arcLength * ((100 - progress)/100)
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 33%;
+    min-width: 130px;
 }
 
 .circleText {
