--- a/src/styles/Mapa.module.css
+++ b/src/styles/Mapa.module.css
@@ -1,9 +1,33 @@
 .main {
     height: 100%;
     width: 100%;
+    position: relative;
 }
 .map {
     height: 100%;
     width: 100%;
     border-radius: var(--border-radius);
+}
+.card {
+    position: absolute;
+    bottom: var(--padding-block-medium);
+    left: var(--padding-inline-medium);
+
+    font-size: var(--font-size-small);
+    z-index: 1;
+    font-weight: bold;
+    min-width: 200px;
+    width: 40%;
+    aspect-ratio: 16/9;
+}
+
+.image {
+    border-radius: var(--border-radius);
+    outline: 1px solid white;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
 }
