--- a/src/styles/SeccionMapaInteractiva.module.css
+++ b/src/styles/SeccionMapaInteractiva.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     gap: var(--padding-inline-medium);
+    position: relative;
 }
 
 .dropdownContainer {
@@ -13,6 +14,7 @@
     justify-content: center;
     align-items: flex-end;
     gap: var(--padding-inline-medium);
+    z-index: 11;
 }
 
 .dropdownContainer p {
