--- a/src/styles/DashboardGrid.module.css
+++ b/src/styles/DashboardGrid.module.css
@@ -27,7 +27,7 @@
     background-color: rgb(255, 255, 255);
     border-radius: var(--border-radius);
     padding: var(--padding-block-medium);
-    gap: var(--padding-block-small);
+    gap: var(--padding-block-medium);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: var(--padding-block-small);
+    gap: var(--padding-block-medium);
     padding: var(--padding-block-medium);
     flex-grow: 1;
     min-height: 12rem;
@@ -80,6 +80,7 @@
     background-color: lightgrey;
     flex-grow: 1;
     position: relative;
+    border-radius: 15px;
 }
 
 .ratingItem .ratingBar20 {
@@ -88,6 +89,7 @@
     width: 20%;
     height: 2rem;
     background-color: #07c;
+    border-radius: 15px;
 }
 
 .ratingItem .ratingBar40 {
@@ -96,6 +98,7 @@
     width: 40%;
     height: 2rem;
     background-color: #07c;
+    border-radius: 15px;
 }
 
 .ratingItem .ratingBar60 {
@@ -104,6 +107,7 @@
     width: 60%;
     height: 2rem;
     background-color: #07c;
+    border-radius: 15px;
 }
 
 .ratingItem .ratingBar80 {
@@ -112,6 +116,7 @@
     width: 80%;
     height: 2rem;
     background-color: #07c;
+    border-radius: 15px;
 }
 
 .ratingItem .ratingBar100 {
@@ -120,6 +125,7 @@
     width: 100%;
     height: 2rem;
     background-color: #07c;
+    border-radius: 15px;
 }
 
 .chartContainer {
