--- a/src/styles/DashboardGrid.module.css
+++ b/src/styles/DashboardGrid.module.css
@@ -62,9 +62,11 @@
 .ratingItem {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     width: 100%;
     gap: var(--padding-inline-small);
+    text-align: left;
 }
 
 .ratingItem .name {
@@ -88,6 +90,8 @@
 
 .ratingItem .ratingBarLegend p {
     font-size: var(--font-size-medium);
+    width: 100%;
+    text-align: right;
 }
 
 .ratingItem .ratingBarBackground {
