--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,18 +36,51 @@
 
 html,
 body {
-    width: 100%;
-    overflow-y: hidden;
+    max-width: 100vw;
     overflow-x: hidden;
-    background-color: rgb(var(--background-color-rgb));
+    height: 100%;
+    max-height: 100%;
 }
 
 body {
+    color: var(--text-color-rgb);
+    background-color: var(--background-color-rgb);
+    position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 a {
     color: inherit;
     text-decoration: none;
 }
+
+/*
+
+
+html,
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+    height: 100%;
+    max-height: 100%;
+}
+
+body {
+    color: var(--text-color-rgb);
+    background-color: var(--background-color-rgb);
+    position: relative;
+    margin-top: var(--header-height);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+*/
