--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100dvh;
-    height: 100vh;
+    /*height: 100dvh;*/
+    height: 100%;
     gap: var(--gap-medium);
     overflow-y: auto;
 }
