--- a/src/styles/Mapa.module.css
+++ b/src/styles/Mapa.module.css
@@ -6,7 +6,6 @@
 .map {
     height: 100%;
     width: 100%;
-    border-radius: var(--border-radius);
 }
 .card {
     position: absolute;
@@ -19,6 +18,7 @@
     max-height: 50%;
     max-width: 40%;
     aspect-ratio: 16/9;
+    display: none;
 }
 
 .image {
@@ -30,4 +30,74 @@
     background-repeat: no-repeat;
     height: 100%;
     width: 100%;
+}
+
+.mapOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 40%;
+    background-color: rgb(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: var(--gap-small);
+    padding-inline: var(--padding-inline-medium);
+    padding-block: var(--padding-block-medium);
+    z-index: 1;
+    max-width: 50%;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.titleContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: var(--gap-medium);
+    text-align: center;
+    z-index: 1;
+    max-width: 80ch;
+    font-size: var(--font-size-xlarge);
+    color: white;
+}
+
+.mapOverlay .title {
+    color: white;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+}
+
+.mapOverlay .subTitle {
+    font-size: var(--font-size-medium);
+    color: white;
+    font-weight: bold;
+}
+
+.mapOverlay .imageContainer {
+    max-height: 50%;
+    max-width: 100%;
+    aspect-ratio: 16/9;
+}
+
+.mapOverlay .imageContainer .locationImage {
+    border-radius: var(--border-radius);
+    outline: 1px solid white;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+}
+
+@media (max-width: 700px) {
+    .mapOverlay {
+        display: none;
+    }
+
+    .card {
+        display: flex;
+    }
 }
