--- a/src/styles/Mapa.module.css
+++ b/src/styles/Mapa.module.css
@@ -42,14 +42,14 @@
     height: 100%;
     width: 40%;
     background-color: rgba(0, 0, 0, 0.7);
-    max-width: 290px;
+    max-width: 340px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
     gap: var(--gap-small);
-    padding-inline: var(--padding-inline-medium);
-    padding-block: var(--padding-block-medium);
+    /*padding-inline: var(--padding-inline-medium);
+    padding-block: var(--padding-block-medium);*/
     z-index: 1;
     box-shadow: 5px 0px 4px 0px rgba(0, 0, 0, 0.4);
     border-top-left-radius: var(--border-radius);
@@ -65,6 +65,8 @@
     z-index: 1;
     max-width: 80ch;
     font-size: var(--font-size-xlarge);
+    padding-inline: var(--padding-inline-medium);
+    padding-block: var(--padding-block-medium);
     color: white;
 }
 
@@ -72,6 +74,7 @@
     color: white;
     font-weight: bold;
     letter-spacing: 0.1rem;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .mapOverlay .subTitle {
@@ -82,12 +85,14 @@
 
 .mapOverlay .imageContainer {
     max-height: 50%;
+    width: 100%;
     max-width: 100%;
     aspect-ratio: 16/9;
 }
 
 .mapOverlay .imageContainer .locationImage {
-    border-radius: var(--border-radius);
+    border-top-left-radius: var(--border-radius);
+
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     background-position: center;
     background-size: cover;
