--- a/src/styles/DashboardGrid.module.css
+++ b/src/styles/DashboardGrid.module.css
@@ -202,6 +202,7 @@ arcOffset = arcLength * ((100 - progress)/100)
     justify-content: center;
     width: 33%;
     min-width: 130px;
+    gap: var(--padding-block-small);
 }
 
 .circleText {
