--- a/src/styles/DashboardGrid.module.css
+++ b/src/styles/DashboardGrid.module.css
@@ -97,6 +97,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    min-height: 20px;
     width: 100%;
     gap: var(--padding-inline-small);
     text-align: left;
@@ -216,10 +217,50 @@ arcOffset = arcLength * ((100 - progress)/100)
     font-size: var(--font-size-small);
 }
 
+.filterButtonContainer {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: var(--padding-inline-small);
+    padding-block-start: var(--padding-block-small);
+}
+
+.filterButtonActive {
+    background-color: rgb(0, 67, 116);
+    border: 1px solid rgb(0, 67, 116);
+    font-size: var(--font-size-small);
+    padding-block: var(--padding-block-small);
+    border-radius: var(--border-radius);
+    cursor: pointer;
+    width: 80px;
+    color: white;
+}
+
+.filterButtonInactive {
+    background-color: transparent;
+    border: 1px solid rgb(0, 67, 116);
+    font-size: var(--font-size-small);
+    padding-block: var(--padding-block-small);
+    border-radius: var(--border-radius);
+    cursor: pointer;
+    width: 80px;
+}
+
+.filterButtonInactive:hover {
+    background-color: rgb(0, 67, 116);
+    color: white;
+}
+
 @media screen and (max-width: 545px) {
     .svgPi {
         width: 80px;
         height: 80px;
+    }
+
+    .filterButtonContainer {
+        justify-content: center;
     }
 
     .svgPiTrack,
