--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,6 +6,16 @@
     height: 100%;
     gap: var(--gap-medium);
     overflow-y: auto;
+    background-image: linear-gradient(
+        40deg,
+        hsl(141deg 24% 26%) 0%,
+        hsl(140deg 24% 38%) -1%,
+        hsl(140deg 25% 51%) -1%,
+        hsl(140deg 24% 63%) -2%,
+        hsl(140deg 24% 75%) 0%,
+        hsl(140deg 24% 88%) 4%,
+        hsl(0deg 0% 100%) 35%
+    );
 }
 
 .main section {
