--- a/src/styles/Mapa.module.css
+++ b/src/styles/Mapa.module.css
@@ -8,7 +8,20 @@
     width: 100%;
     border-radius: var(--border-radius);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
+
+/* make map non-interactive
+.map::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+*/
 
 .card {
     position: absolute;
